@@ -20,14 +20,14 @@ EBUILD chromium-15.0.874.120.ebuild 14144 RMD160 f1771e74345fb39d4bcffe8c35aaaf6
 EBUILD chromium-16.0.912.32.ebuild 16605 RMD160 8b44e2d0d9c3a2b727c71fcc58cf1484a2da8244 SHA1 2f3822c574d8aea66d886aafd4f3f37c049e42d0 SHA256 729077a41821a5be15398eb47d9c45fe2d9ea482886a21272128c1e815a59cd1
 EBUILD chromium-16.0.912.36.ebuild 16602 RMD160 43bb9f4f7b9704c62054c069d880e618310faddd SHA1 80ff09e23789cb6611a270c2a10e80be4d5d575f SHA256 f2f4827a02fe7d72b411cc8a185fb4ce533858e0b32405df384a690605ca4290
 EBUILD chromium-17.0.932.0.ebuild 17048 RMD160 9d5e6bd5f553e3e6ca1929b0026d1a7791bdf59f SHA1 26bf74d03461bd395e4c63487dba4fbdd10c2e41 SHA256 a3bab0b389ad36f3b3855348158c45b60817522125b3a2813b0b79f91fdd8902
-EBUILD chromium-17.0.938.0.ebuild 17014 RMD160 4429eb6e808a708669a8c30b5d13700e8c0e841b SHA1 0683978d3d7f2e88e773ebcbb6eb8ecb93aea1c5 SHA256 ee030b93ea8c64178342355e920b6ccb661fef2efaeaef45ae2f12f3348bf387
-EBUILD chromium-9999-r1.ebuild 19045 RMD160 2b22ca1b4280fa5e73c87182f6342bef5e0c78a1 SHA1 91f1db370c8257829f9bbdb0b24b5f2a705d0f7e SHA256 dd2c4480732ec61b84537dcf1bbec8820b18eaf90faaca6d213a7d4e4263f452
-MISC ChangeLog 109738 RMD160 b895a37446294a94af828745143d84624a82081a SHA1 41de19885239d2adb2f5515c0d05f58d6a2214e2 SHA256 e9915ed709c08d30a7c4390efb7bea9697fc2dc16e7990785cd8da09c37026e8
+EBUILD chromium-17.0.938.0.ebuild 17003 RMD160 5ae571ce471c21baa2cac4cc9ba9610f83719d1f SHA1 38a71d31060a41ed740b022bd42ddbbdaf5d517c SHA256 e405458afb479cf45c69cb8811bd8ced0b51f722577deb51981409a6c08ba4c9
+EBUILD chromium-9999-r1.ebuild 19031 RMD160 87ec4a4e8f329c58a153fc5bd90d74264c0d9295 SHA1 11f67e437103044374a494a95e60a83f11e647f0 SHA256 6548878c04c4e3719092b3a9d059d79bc45a46d563dafe5a04740a6a4222e418
+MISC ChangeLog 109888 RMD160 0b6cda11c9c80a4c37ea48148afc110f6fb2f262 SHA1 21e670d5211cd8bfbbf00e27e03f882fc628d8bb SHA256 981e1e40c600bef7b1340d11b50a611dc685bd662cb571f335b4b421a6cbd6b7
 MISC metadata.xml 267 RMD160 3a166415fec415d539c1b7c32ed40b188488b9fb SHA1 5c3d71a9cea27175cbe8c98369b42b79c8643c6c SHA256 4e6afae33f60d6752cacf2785f7f9a396b8711cce605b73d0d752a4af7d01fc8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7CrrsACgkQC77qH+pIQ6SdcwEAmxfP/1Lp4RpPrBFDgxZo3TOx
-1eAX0/5WiK0j2EviYdABAJMdXaLSgWz5DWYaNrSFoYI4qMhZrT3KOVvr2r/k02Qn
-=FrU9
+iF4EAREIAAYFAk7DGCIACgkQC77qH+pIQ6QSaQD+LZAeiHNk9qGpizxZ2Q8a6VLB
+JcFFIjh7ts9cKSQyGr4BAKn+vV+U1hcjP0og2gIIVaKFsPjz4T8nnkmhVAgE6fSk
+=kNlX
 -----END PGP SIGNATURE-----
