@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-17.0.938.0.ebuild,v 1.2 2011/11/15 18:25:55 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-17.0.938.0.ebuild,v 1.3 2011/11/16 01:55:37 floppym Exp $
 
 EAPI="4"
 PYTHON_DEPEND="2:2.6"
@@ -175,7 +175,7 @@ src_prepare() {
 	# zlib-1.2.5.1-r1 renames the OF macro in zconf.h, bug 383371.
 	sed -i '1i#define OF(x) x' \
 		third_party/zlib/contrib/minizip/{ioapi,{,un}zip}.c \
-		chrome/common/zip{,_internal}.cc || die
+		chrome/common/zip*.cc || die
 
 	epatch_user
 
